Bug #14926: Secure *.findHistoryById methods